# remote-wheel

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
remote-wheel-sender/: Cargo.toml
remote-wheel-sender/sample-configs/: README.md  with-viewer.toml  with-vnyan-game.toml  with-vnyan-single.toml  with-vnyan-stream.toml
remote-wheel-sender/src/: config.rs  controller.rs  default-config.toml  default-config.yaml  input.rs  main.rs  osc.rs  output.rs  vmc.rs
remote-wheel-sender/src/config/: mod.rs  reference.toml  with-viewer.toml  with-vnyan-game.toml  with-vnyan-single.toml  with-vnyan-stream.toml
remote-wheel-sender/src/osc/: config.rs  input.rs  output.rs
remote-wheel-sender/src/output/: mod.rs  osc.rs
remote-wheel-sender/src/vmc/: avatar.rs  bone.rs  config.rs  device.rs  ik.rs  math.rs  mod.rs
remote-wheel-sender/src/vmc/device/: mod.rs  wheel.rs
remote-wheel-sender/src/vmc/device/wheel/: technique.rs
remote-wheel-sender/src/vmc/device/wheel/technique/: glue.rs  rotational.rs
remote-wheel-sender/src/vmc/ik/: fabrik.rs  tri.rs
remote-wheel-viewer/: Cargo.toml
remote-wheel-viewer/src/: config.rs  default-config.toml  default-config.yaml  default-wheel.krz  main.rs
vnyan/: Pedals.vnprop  README.md  Wheel.vnprop  WheelOnly.json  WheelPedals.json
