[package]
name = "remote-wheel-sender"
description = "Monitors one or more joysticks and sends them to another software to allow for integration."
authors = ["Barinzaya <barinzaya@gmail.com>"]
version = "0.3.1-a1"
edition = "2021"

[dependencies]
anyhow = "1"
async-broadcast = "0.5"
console = { version = "0.15", features = [], default-features = false }
ctrlc = "3"
dialoguer = { version = "0.10", features = [], default-features = false }
futures = "0.3"
glam = { version = "0.23", features = ["debug-glam-assert", "fast-math"], optional = true }
hashbrown = { version = "0.13", features = ["serde"] }
linear-map = { version = "1", features = ["serde_impl"], optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
num_enum = { version = "0.5", optional = true }
phf = { version = "0.11", features = ["macros"], optional = true }
rosc = { git = "https://github.com/barinzaya/rosc", branch = "encoder-improvements", optional = true }
sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
serde = { version = "1", features = ["derive", "rc"] }
simplelog = "0.12"
smol = "1"
string_cache = "0.8"
time = { version = "0.3", features = ["formatting"] }
toml = { version = "0.7", features = ["parse"], default-features = false }

[features]
default = ["osc", "vmc"]
osc = ["linear-map", "rosc"]
vmc = ["glam", "num_enum", "phf", "rosc"]
